# nashfp-rocket-demo

./: .env  Cargo.toml  README.md
migrations/2018-03-27-190604_create_users/: up.sql
src/: db.rs  main.rs  schema.rs  user.rs
static/: index.html
