[package]
name = "demo"
version = "0.1.0"
authors = ["Shritesh Bhattarai <shr@ite.sh>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

diesel = { version = "1.1.1", features = ["r2d2", "postgres"] }
dotenv = "0.9.0"
